fix: apply the default team only to the package library
Issue #19
Apply the default team only to the package library
- all the global selector were deleted like "html {"
- the library components currently has stated colors so that the
  components won't change with global styles from outside (except
  font-size and font-family)
- fix overflowed borders of the menu items in the rounded border list
- apply general styles: font-size, font-family to the storybook main
  canvas.

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -9,7 +9,6 @@
     color: var(--color-text-default);
     cursor: pointer;
     display: inline-block;
-    font-family: var(--font-family);
     line-height: 1em;
     @include s.padding(s.$medium);
 
