--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -14,6 +14,7 @@
     border-radius: var(--medium-border-radius);
     border: 1px solid var(--menu-border-color);
     min-width: 100%;
+    overflow: hidden;
   }
 
   li {
