--- a/src/styles/utilities/_global.scss
+++ b/src/styles/utilities/_global.scss
@@ -5,9 +5,9 @@
   --medium-border-radius: 0.28571429rem;
 
   // TODO: this is part of a theme
-  --menu-border-color: rgba(34, 36, 38, 0.15);
+  --menu-border-color: #d8d8d9;
   --menu-box-shadow: 0 2px 4px 0 var(--menu-border-color), 0 2px 10px 0 var(--menu-border-color);
-  --menu-item-hover-color: rgba(0, 0, 0, 0.05);
+  --menu-item-hover-color: #f2f2f2;
 }
 
 // Size names
